<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="stanka.me.portfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp">

        <Button
            android:text="@string/app1"
            android:id="@+id/button"
            style="@style/btn_style"
            android:onClick="btn_clicked"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:text="@string/app2"
            android:id="@+id/button2"
            style="@style/btn_style"
            android:onClick="btn_clicked"
            android:enabled="true"
            android:clickable="true" />

        <Button
            android:text="@string/app3"
            android:id="@+id/button3"
            style="@style/btn_style"
            android:onClick="btn_clicked"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:text="@string/app4"
            android:id="@+id/button4"
            style="@style/btn_style"
            android:onClick="btn_clicked"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:text="@string/app5"
            android:id="@+id/button5"
            style="@style/btn_style"
            android:onClick="btn_clicked"
            android:enabled="true"
            android:clickable="true" />

        <Button
            android:text="@string/app6"
            android:id="@+id/button6"
            style="@style/btn_style"
            android:onClick="btn_clicked"
            android:clickable="true"
            android:enabled="true" />
    </LinearLayout>
</RelativeLayout>
